--- a/.github/workflows/monthly-send-email.yml
+++ b/.github/workflows/monthly-send-email.yml
@@ -3,7 +3,9 @@ name: Send monthly email
 on:
   schedule:
     # Runs at 10:00 UTC on day 10 of every month
-    - cron: "0 10 10 * *"
+    # - cron: "0 10 10 * *"
+    # Runs every 15 minutes (UTC)
+    - cron: "*/15 * * * *"
 
   workflow_dispatch:
 
