--- a/.github/workflows/monthly-send-email.yml
+++ b/.github/workflows/monthly-send-email.yml
@@ -2,10 +2,8 @@ name: Send monthly email
 
 on:
   schedule:
-    # Runs at 10:00 UTC on day 10 of every month
-    # - cron: "0 10 10 * *"
-    # Runs every 15 minutes (UTC)
-    - cron: "*/15 * * * *"
+    # Monthly run (1st day of the month)
+    - cron: "0 0 1 * *"
 
   workflow_dispatch:
 
